# cppSnake

./: CMakeLists.txt  README.md  snake  snake.cpp  snake.h
src/: snake.cpp  snake.h
